[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HighscoreEdit.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
resource_local_to_scene = true
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 1 )

[node name="HighscoreEditScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 216.0
margin_top = 3.0
margin_right = 790.0
margin_bottom = 91.0
theme = SubResource( 2 )
text = "Nouvel highscore
593"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInputName" type="Label" parent="."]
margin_left = 339.0
margin_top = 214.0
margin_right = 691.0
margin_bottom = 277.0
theme = SubResource( 4 )
text = "Entrez votre nom :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditName" type="TextEdit" parent="."]
margin_left = 370.0
margin_top = 314.0
margin_right = 670.0
margin_bottom = 414.0
custom_colors/background_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValidateButton" type="Button" parent="."]
margin_left = 444.0
margin_top = 435.0
margin_right = 588.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 6 )
text = "Valider"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="TextEditName" to="." method="_on_TextEditName_text_changed"]
[connection signal="button_down" from="ValidateButton" to="." method="_on_ValidateButton_button_down"]
